--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn --pretty --transpile-only index.ts",
-    "build": "npx tsc && apidoc -i Routes/ -o Doc/",
+    "build": "npx tsc && apidoc -i Routes/ -o Doc/ && cp -R Doc dist/Doc",
     "start": "node dist/index.js"
   },
   "dependencies": {
